<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Writing.Writing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/story_title_writing"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/writing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_story_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/author_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/writing_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_author_name" />

    </LinearLayout>

    <Spinner
        android:id="@+id/writing_spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <EditText
        android:id="@+id/writing_article"
        android:gravity="top|start"
        android:layout_width="match_parent"
        android:padding="2dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textinput"
        android:hint="@string/write_your_story_here"
        android:minHeight="200dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/writing_button_draft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:minWidth="120dp"
            android:text="@string/save_draft"
            android:layout_marginStart="30dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/writing_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:minWidth="120dp"
            android:text="@string/submit"
            android:layout_marginEnd="30dp" />
    </LinearLayout>


</LinearLayout>