<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ProgressBar
        android:id="@+id/progressBarSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/signup_activity_launcher_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="70dp"
                android:padding="16dp"
                android:src="@drawable/launcher_icon" />

            <EditText
                android:id="@+id/editTextEmailSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/mail"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:textColor="#fff"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/mail" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/editTextPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="16dp"
                android:textColor="#fff"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/lock" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/editTextPasswordSignupRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="16dp"
                android:textColor="#fff"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/lock" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:id="@+id/buttonSignup"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="#fff"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#f16f71"
                android:textSize="18sp"
                android:textStyle="normal"
                android:focusable="true" />

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="77dp"
                android:paddingTop="20dp"
                android:text="@string/already_have_an_account_login"
                android:textColor="#fff" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>