<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingEnd="18dp"
    android:paddingStart="18dp">

    <!--
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
     -->

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/login_screen_launcher_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="70dp"
                android:padding="16dp"
                android:src="@drawable/launcher_icon" />

            <EditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/mail"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawableStart="@drawable/mail" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawableStart="@drawable/lock" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />


            <Button
                android:id="@+id/buttonLogin"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/white"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/button"
                android:textSize="18sp"
                android:textStyle="normal"
                android:focusable="true" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="77dp"
                android:paddingTop="20dp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/white" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>